Feat : ajout de la fonctionalité d'ajout d'une clée
